<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@id/trailPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GREEN_DARK"
    tools:context=".ActivityTrail"
    android:fillViewport="true">

<LinearLayout
    android:id="@id/linearLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".ActivityTrail">

        <TextView style="@style/TextWhiteStyle"
            android:id="@id/trailTxtViewTrailNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sampleTrailName"
            android:textAlignment="center"
            android:textSize="9pt"
            android:alpha="1.0"/>

        <ImageView android:id="@id/trailImgViewTrail"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/greatbearspringsrecreationarea"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/trailImgViewContentDesc"
            android:onClick="trailActivityTrailImageViewOnClick"/>
            <!--android:src="@drawable/greatbearspringsrecreationarea"-->

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@id/trailMapFragment"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:name="com.google.android.gms.maps.MapFragment"
            tools:context=".MapActivity"/>

        <RatingBar android:id="@id/trailRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="20.0"
            android:rating="4.5"
            android:layout_gravity="center_horizontal"/>

        <!--TextViews for Trail difficulty-->
        <RelativeLayout
            android:id="@id/relativeLayoutDifficulty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewDifficulty"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewDifficulty"/>

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewDifficultyValue"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewDifficultyValue"/>
        </RelativeLayout>

        <!--TextViews for Trail distance-->
        <RelativeLayout
            android:id="@id/relativeLayoutDistance"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewDistance"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewDistance"/>

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewDistanceValue"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewDistanceValue"/>
        </RelativeLayout>

        <!--TextViews for Trail duration-->
        <RelativeLayout
            android:id="@id/relativeLayoutDuration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewDuration"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewDuration"/>

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewDurationValue"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewDurationValue"/>
        </RelativeLayout>

        <!--TextViews for Trail elevation-->
        <RelativeLayout
            android:id="@id/relativeLayoutElevation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewElevation"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewElevation"/>

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewElevationValue"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewElevationValue"/>
        </RelativeLayout>

        <!--TextViews for Trail gear-->
        <RelativeLayout
            android:id="@id/relativeLayoutGear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewGear"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewGear"/>

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewGearValue"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewGearValue"/>
        </RelativeLayout>

        <!--TextViews for Trail conditions-->
        <RelativeLayout
            android:id="@id/relativeLayoutConditions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewConditions"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewConditions"/>

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewConditionsValue"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewConditionsValue"/>
        </RelativeLayout>

        <!--TextViews for Trail pet friendly-->
        <RelativeLayout
            android:id="@id/relativeLayoutPetFriendly"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewPetFriendly"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewPetFriendly"/>

            <TextView style="@style/TextWhiteStyle"
                android:id="@id/trailTxtViewPetFriendlyValue"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:alpha="1.0"
                android:text="@string/trailTxtViewPetFriendlyValue"/>
        </RelativeLayout>

        <GridView
            android:id="@id/trailGridView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:columnWidth="90dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="10dp"
            android:horizontalSpacing="10dp"
            android:stretchMode="columnWidth"
            android:gravity="center">
            </GridView>
    </LinearLayout>
</ScrollView>