<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Trail"
    android:fillViewport="true">

    <LinearLayout android:id="@id/trailPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/GRAY_MEDIUM"
        tools:context=".MainActivity">

        <TextView android:id="@id/trailTxtViewTrailName"
            android:background="#000000"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sampleTrailName"
            android:textColor="@color/WHITE"
            android:textSize="12pt"
            android:textAlignment="center"
            android:alpha="0.5"/>

        <!--android:layout_below="@id/trailTxtViewTrailName"-->
        <ImageView android:id="@id/trailImgViewTrail"
            android:layout_marginTop="3dp"
            android:layout_width="fill_parent"
            android:layout_height="160dp"
            android:background="#000000"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/trailImgViewContentDesc"
            android:src="@drawable/greatbearspringsrecreationarea"/>

        <!--android:layout_below="@id/trailImgViewTrail"-->
        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@id/trailMapFragment"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:name="com.google.android.gms.maps.MapView"
            tools:context=".MapActivity"/>

        <!--android:layout_below="@id/trailMapFragment"-->
        <RatingBar android:id="@id/trailRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="20.0"
            android:rating="4.5"/>

        <!--android:layout_below="@id/trailRatingBar"-->
        <!--android:layout_centerHorizontal="true"-->
        <TextView android:id="@id/trailTxtViewDifficulty"
            android:background="#CCFFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trailTxtViewDifficulty"/>

        <!--android:layout_below="@id/trailTxtViewDifficulty"-->
        <!--android:layout_centerHorizontal="true"-->
        <TextView android:id="@id/trailTxtViewDistance"
            android:background="#CCFFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trailTxtViewDistance"/>

        <!--android:layout_below="@+id/distance"-->
        <!--android:layout_centerHorizontal="true"-->
        <TextView android:id="@id/trailTxtViewDuration"
            android:background="#CCFFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trailTxtViewDuration"/>

        <!--android:layout_below="@+id/duration"-->
        <!--android:layout_centerHorizontal="true"-->
        <TextView android:id="@id/trailTxtViewElevation"
            android:background="#CCFFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trailTxtViewElevation"/>

        <!--android:layout_below="@+id/elevation"-->
        <!--android:layout_centerHorizontal="true"-->
        <TextView android:id="@id/trailTxtViewGear"
            android:background="#CCFFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trailTxtViewGear"/>

        <!--android:layout_below="@+id/gear"-->
        <!--android:layout_centerHorizontal="true"-->
        <TextView android:id="@id/trailTxtViewCondition"
            android:background="#CCFFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trailTxtViewCondition"/>

        <!--android:layout_below="@+id/condition"-->
        <!--android:layout_centerHorizontal="true"-->
        <TextView android:id="@id/trailTxtViewPetFriendly"
            android:background="#CCFFFFFF"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trailTxtViewPetFriendly"/>

        <!--android:layout_below="@+id/condition"-->
        <!--<ListView android:id="@id/trailListView"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>-->
    </LinearLayout>
</ScrollView>